# whiteboard

./: README.md  main.py  pyproject.toml
website/: index.html  script.js  style.css
